@@ -1,7 +1,8 @@
 package greencity.service.ubs;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.maps.model.LatLng;
-import greencity.client.MonoBankClient;
 import greencity.client.UserRemoteClient;
 import greencity.client.WayForPayClient;
 import greencity.constant.AppConstant;
@@ -40,12 +41,6 @@ import greencity.dto.pageble.PageableDto;
 import greencity.dto.payment.PaymentResponseDto;
 import greencity.dto.payment.PaymentResponseWayForPay;
 import greencity.dto.payment.PaymentWayForPayRequestDto;
-import greencity.dto.payment.monobank.BasketOrder;
-import greencity.dto.payment.monobank.CheckoutResponseFromMonoBank;
-import greencity.dto.payment.monobank.MerchantPaymentInfo;
-import greencity.dto.payment.monobank.MonoBankPaymentRequestDto;
-import greencity.dto.payment.monobank.MonoBankPaymentResponseDto;
-import greencity.dto.payment.monobank.PaymentInfo;
 import greencity.dto.position.PositionAuthoritiesDto;
 import greencity.dto.user.AllPointsUserDto;
 import greencity.dto.user.DeactivateUserRequestDto;
@@ -69,14 +64,13 @@ import greencity.entity.order.OrderPaymentStatusTranslation;
 import greencity.entity.order.OrderStatusTranslation;
 import greencity.entity.order.Payment;
 import greencity.entity.order.TariffsInfo;
-import greencity.entity.telegram.TelegramBot;
+import greencity.entity.telegram.TelegramChat;
 import greencity.entity.user.Location;
 import greencity.entity.user.User;
 import greencity.entity.user.employee.Employee;
 import greencity.entity.user.ubs.Address;
 import greencity.entity.user.ubs.OrderAddress;
 import greencity.entity.user.ubs.UBSuser;
-import greencity.entity.viber.ViberBot;
 import greencity.enums.AddressStatus;
 import greencity.enums.BagStatus;
 import greencity.enums.BonusReason;
@@ -84,12 +78,10 @@ import greencity.enums.BotType;
 import greencity.enums.CertificateStatus;
 import greencity.enums.CourierLimit;
 import greencity.enums.LocationStatus;
-import greencity.enums.MonoBankStatuses;
 import greencity.enums.NotificationType;
 import greencity.enums.OrderPaymentStatus;
 import greencity.enums.OrderStatus;
 import greencity.enums.PaymentStatus;
-import greencity.enums.PaymentType;
 import greencity.enums.TariffStatus;
 import greencity.exceptions.BadRequestException;
 import greencity.exceptions.NotFoundException;
@@ -116,21 +108,16 @@ import greencity.repository.OrdersForUserRepository;
 import greencity.repository.PaymentRepository;
 import greencity.repository.TariffLocationRepository;
 import greencity.repository.TariffsInfoRepository;
-import greencity.repository.TelegramBotRepository;
+import greencity.repository.TelegramChatRepository;
 import greencity.repository.UBSUserRepository;
 import greencity.repository.UserNotificationRepository;
 import greencity.repository.UserRepository;
-import greencity.repository.ViberBotRepository;
 import greencity.service.DistanceCalculationUtils;
 import greencity.service.google.GoogleApiService;
-import greencity.service.notification.NotificationServiceImpl;
 import greencity.service.phone.UAPhoneNumberUtil;
 import greencity.util.Bot;
 import greencity.util.EncryptionUtil;
 import greencity.util.OrderUtils;
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.EntityNotFoundException;
-import jakarta.persistence.PersistenceContext;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -150,7 +137,6 @@ import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.OffsetDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -169,44 +155,8 @@ import java.util.stream.LongStream;
 import static greencity.constant.AppConstant.ENROLLMENT_TO_THE_BONUS_ACCOUNT_EN;
 import static greencity.constant.AppConstant.UBS_EMPLOYEE_WITH_PREFIX;
 import static greencity.constant.AppConstant.USER_WITH_PREFIX;
-import static greencity.constant.ErrorMessage.BAG_NOT_FOUND;
-import static greencity.constant.ErrorMessage.CANNOT_ACCESS_ORDER_CANCELLATION_REASON;
-import static greencity.constant.ErrorMessage.CANNOT_ACCESS_PERSONAL_INFO;
-import static greencity.constant.ErrorMessage.CERTIFICATE_EXPIRED;
-import static greencity.constant.ErrorMessage.CERTIFICATE_IS_NOT_ACTIVATED;
-import static greencity.constant.ErrorMessage.CERTIFICATE_IS_USED;
-import static greencity.constant.ErrorMessage.CERTIFICATE_NOT_FOUND;
-import static greencity.constant.ErrorMessage.CERTIFICATE_NOT_FOUND_BY_CODE;
-import static greencity.constant.ErrorMessage.COURIER_IS_NOT_FOUND_BY_ID;
-import static greencity.constant.ErrorMessage.EMPLOYEE_DOESNT_EXIST;
-import static greencity.constant.ErrorMessage.EVENTS_NOT_FOUND_EXCEPTION;
-import static greencity.constant.ErrorMessage.LOCATION_DOESNT_FOUND_BY_ID;
-import static greencity.constant.ErrorMessage.LOCATION_IS_DEACTIVATED_FOR_TARIFF;
-import static greencity.constant.ErrorMessage.NOT_ENOUGH_BAGS_EXCEPTION;
-import static greencity.constant.ErrorMessage.NOT_FOUND_ADDRESS_ID_FOR_CURRENT_USER;
-import static greencity.constant.ErrorMessage.ORDER_ALREADY_PAID;
-import static greencity.constant.ErrorMessage.ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST;
-import static greencity.constant.ErrorMessage.PAYMENT_VALIDATION_ERROR;
-import static greencity.constant.ErrorMessage.PRICE_OF_ORDER_GREATER_THAN_LIMIT;
-import static greencity.constant.ErrorMessage.PRICE_OF_ORDER_LOWER_THAN_LIMIT;
-import static greencity.constant.ErrorMessage.RECIPIENT_WITH_CURRENT_ID_DOES_NOT_EXIST;
-import static greencity.constant.ErrorMessage.SOME_CERTIFICATES_ARE_INVALID;
-import static greencity.constant.ErrorMessage.TARIFF_FOR_BAGS_AT_LOCATION_NOT_EXIST;
-import static greencity.constant.ErrorMessage.TARIFF_FOR_COURIER_AND_LOCATION_NOT_EXIST;
-import static greencity.constant.ErrorMessage.TARIFF_FOR_LOCATION_NOT_EXIST;
-import static greencity.constant.ErrorMessage.TARIFF_FOR_ORDER_NOT_EXIST;
-import static greencity.constant.ErrorMessage.TARIFF_NOT_FOUND;
-import static greencity.constant.ErrorMessage.TARIFF_NOT_FOUND_BY_LOCATION_ID;
-import static greencity.constant.ErrorMessage.TARIFF_OR_LOCATION_IS_DEACTIVATED;
-import static greencity.constant.ErrorMessage.THE_SET_OF_UBS_USER_DATA_DOES_NOT_EXIST;
-import static greencity.constant.ErrorMessage.TOO_MANY_CERTIFICATES;
-import static greencity.constant.ErrorMessage.TOO_MUCH_POINTS_FOR_ORDER;
-import static greencity.constant.ErrorMessage.TO_MUCH_BAG_EXCEPTION;
-import static greencity.constant.ErrorMessage.USER_DONT_HAVE_ENOUGH_POINTS;
-import static greencity.constant.ErrorMessage.USER_WITH_CURRENT_ID_DOES_NOT_EXIST;
-import static greencity.constant.ErrorMessage.USER_WITH_CURRENT_UUID_DOES_NOT_EXIST;
-import static greencity.constant.ErrorMessage.ORDER_STATUS_AND_PAYMENT_CONDITION_FAILED;
-import static greencity.constant.ErrorMessage.ORDER_NOT_FOUND_BY_ID;
+import static greencity.constant.ErrorMessage.*;
+import static greencity.util.OrderUtils.getLastPayment;
 import static java.util.Objects.nonNull;
 import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toList;
@@ -219,14 +169,13 @@ import static java.util.stream.Collectors.toMap;
 @RequiredArgsConstructor
 @Slf4j
 public class UBSClientServiceImpl implements UBSClientService {
-    @PersistenceContext
-    private EntityManager entityManager;
     private static final Integer VALIDITY_DURATION_TEN_DAYS = 864000;
     private static final String PAY_BUTTON = "payButton";
     private final UserRepository userRepository;
     private final BagRepository bagRepository;
     private final UBSUserRepository ubsUserRepository;
     private final ModelMapper modelMapper;
+    private final ObjectMapper objectMapper;
     private final CertificateRepository certificateRepository;
     private final OrderRepository orderRepository;
     private final CourierRepository courierRepository;
@@ -245,21 +194,16 @@ public class UBSClientServiceImpl implements UBSClientService {
     private final TariffLocationRepository tariffLocationRepository;
     private final LocationRepository locationRepository;
     private final TariffsInfoRepository tariffsInfoRepository;
-    private final TelegramBotRepository telegramBotRepository;
-    private final ViberBotRepository viberBotRepository;
+    private final TelegramChatRepository telegramBotRepository;
     private final OrderBagRepository orderBagRepository;
     private final OrderBagService orderBagService;
     private final NotificationService notificationService;
     private final WayForPayClient wayForPayClient;
     private final LocationToLocationsDtoMapper locationToLocationsDtoMapper;
-    private final MonoBankClient monoBankClient;
-    private final NotificationServiceImpl notificationServiceImpl;
     private final UserNotificationRepository userNotificationRepository;
     private final NotificationParameterRepository notificationParameterRepository;
     private final AddressService addressService;
 
-    @Value("${greencity.bots.viber-bot-uri}")
-    private String viberBotUri;
     @Value("${greencity.bots.ubs-bot-name}")
     private String telegramBotName;
     @Value("${greencity.redirect.result-way-for-pay-url}")
@@ -270,20 +214,14 @@ public class UBSClientServiceImpl implements UBSClientService {
     private String wayForPaySecret;
     @Value("${greencity.wayforpay.merchant.domain.name}")
     private String merchantDomainName;
-    @Value("${greencity.monobank.token}")
-    private String token;
-    @Value("${greencity.monobank.redirect}")
-    private String monoBankRedirectionUrl;
-    @Value("${greencity.monobank.redirect.result-monobank-url}")
-    private String monoBankPaymentRedirectUrl;
+    @Value("${greencity.redirect.green-city-client}")
+    private String greenCityClientUrl;
     private static final String FAILED_STATUS = "failure";
     private static final String APPROVED_STATUS = "Approved";
     private static final String TELEGRAM_PART_1_OF_LINK = "https://telegram.me/";
-    private static final String VIBER_PART_1_OF_LINK = "viber://pa?chatURI=";
-    private static final String VIBER_PART_3_OF_LINK = "&context=";
     private static final String TELEGRAM_PART_3_OF_LINK = "?start=";
     private static final String LANGUAGE_EN = "en";
-    private static final String LANGUAGE_UK = "ua";
+    private static final String LANGUAGE_UK = "uk";
     private static final Double KYIV_LATITUDE = 50.4546600;
     private static final Double KYIV_LONGITUDE = 30.5238000;
     private static final Double LOCATION_40_KM_ZONE_VALUE = 40.00;
@@ -293,7 +231,6 @@ public class UBSClientServiceImpl implements UBSClientService {
     private static final String ADDRESS_NOT_WITHIN_LOCATION_AREA_MESSAGE = "Location and Address selected "
         + "does not match, reselect correct data.";
     private static final byte CURRENCY_CONVERSION_RATE = 100;
-    private static final String DEFAULT_VALUE_FOR_PAYMENT = "Unknown";
 
     /**
      * {@inheritDoc}
@@ -314,6 +251,58 @@ public class UBSClientServiceImpl implements UBSClientService {
             .time(response.getCreatedDate()).build();
         accept.setSignature(encryptionUtil.formResponseSignature(accept, wayForPaySecret));
         return accept;
+    }
+
+    @Override
+    @Transactional
+    public PaymentResponseWayForPay convertMapIntoPaymentResponseDto(Map<String, String> formParams) {
+        if (formParams == null || formParams.isEmpty()) {
+            return buildErrorResponse("No form params received");
+        }
+        log.debug("Received {} form param(s) from WayForPay", formParams.size());
+
+        String jsonKey = formParams.keySet().iterator().next();
+        log.debug("Extracted JSON from param key: {}", jsonKey);
+
+        PaymentResponseDto dto;
+        try {
+            dto = getPaymentResponseDto(jsonKey);
+        } catch (JsonProcessingException e) {
+            return buildErrorResponse("Invalid JSON format");
+        }
+
+        if (isInvalidSignature(dto)) {
+            return buildErrorResponse("Invalid signature");
+        }
+
+        log.info("Valid signature for orderReference={}", dto.getOrderReference());
+        return validatePayment(dto);
+    }
+
+    private PaymentResponseDto getPaymentResponseDto(String jsonKey) throws JsonProcessingException {
+        PaymentResponseDto dto = objectMapper.readValue(jsonKey, PaymentResponseDto.class);
+        log.info("Processing payment: orderReference={}, status={}",
+            dto.getOrderReference(), dto.getTransactionStatus());
+        return dto;
+    }
+
+    private boolean isInvalidSignature(PaymentResponseDto dto) {
+        String calculatedSignature = encryptionUtil.generateResponseSignature(dto, wayForPaySecret);
+        if (!calculatedSignature.equals(dto.getMerchantSignature())) {
+            log.error("Invalid signature for orderReference={}", dto.getOrderReference());
+            return true;
+        }
+        return false;
+    }
+
+    private PaymentResponseWayForPay buildErrorResponse(String message) {
+        log.error("Payment processing error: {}", message);
+        return PaymentResponseWayForPay.builder()
+            .status("ERROR")
+            .orderReference(null)
+            .time(LocalDateTime.now().toString())
+            .signature(null)
+            .build();
     }
 
     private Payment mapPayment(PaymentResponseDto response, String decodedOrderReference) {
@@ -382,10 +371,10 @@ public class UBSClientServiceImpl implements UBSClientService {
      */
     @Override
     public UserPointsAndAllBagsDto getFirstPageDataByTariffAndLocationId(Long tariffId, Long locationId) {
-        var tariffsInfo = tariffsInfoRepository.findById(tariffId)
+        TariffsInfo tariffsInfo = tariffsInfoRepository.findById(tariffId)
             .orElseThrow(() -> new NotFoundException(TARIFF_NOT_FOUND + tariffId));
 
-        var location = locationRepository.findById(locationId)
+        Location location = locationRepository.findById(locationId)
             .orElseThrow(() -> new NotFoundException(LOCATION_DOESNT_FOUND_BY_ID + locationId));
 
         checkIfTariffIsAvailableForCurrentLocation(tariffsInfo, location);
@@ -395,16 +384,16 @@ public class UBSClientServiceImpl implements UBSClientService {
 
     @Override
     public UserPointsAndAllBagsDto getFirstPageDataByOrderId(String uuid, Long orderId) {
-        var user = userRepository.findUserByUuid(uuid).orElseThrow(
+        User user = userRepository.findUserByUuid(uuid).orElseThrow(
             () -> new NotFoundException(USER_WITH_CURRENT_UUID_DOES_NOT_EXIST));
-        var order = orderRepository.findById(orderId).orElseThrow(
+        Order order = orderRepository.findById(orderId).orElseThrow(
             () -> new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + orderId));
 
         checkIsOrderOfCurrentUser(user, order);
 
-        var tariffsInfo = order.getTariffsInfo();
+        TariffsInfo tariffsInfo = order.getTariffsInfo();
 
-        var location = getLocationByOrderIdThroughLazyInitialization(order);
+        Location location = getLocationByOrderIdThroughLazyInitialization(order);
 
         checkIfTariffIsAvailableForCurrentLocation(tariffsInfo, location);
 
@@ -423,7 +412,7 @@ public class UBSClientServiceImpl implements UBSClientService {
             || location.getLocationStatus() == LocationStatus.DEACTIVATED) {
             throw new BadRequestException(TARIFF_OR_LOCATION_IS_DEACTIVATED);
         } else {
-            var isAvailable = isTariffAvailableForCurrentLocation(tariffsInfo, location);
+            boolean isAvailable = isTariffAvailableForCurrentLocation(tariffsInfo, location);
             if (!isAvailable) {
                 throw new BadRequestException(LOCATION_IS_DEACTIVATED_FOR_TARIFF + tariffsInfo.getId());
             }
@@ -439,18 +428,20 @@ public class UBSClientServiceImpl implements UBSClientService {
 
     private UserPointsAndAllBagsDto getUserPointsAndAllBagsDtoByTariffIdAndOrderIdAndUserPoints(Long tariffId,
         Integer userPoints, Long orderId) {
-        var bagTranslationDtoList = bagRepository.findAllActiveBagsByTariffsInfoId(tariffId).stream()
-            .map(bag -> buildBagTranslationDto(orderId, bag))
-            .collect(toList());
+        List<BagTranslationDto> bagTranslationDtoList =
+            bagRepository.findAllActiveBagsByTariffsInfoId(tariffId).stream()
+                .map(bag -> buildBagTranslationDto(orderId, bag))
+                .toList();
         return new UserPointsAndAllBagsDto(bagTranslationDtoList, userPoints);
     }
 
     private UserPointsAndAllBagsDto getUserPointsAndAllBagsDtoByTariffIdAndUserPoints(Long tariffId,
         Integer userPoints) {
-        var bagTranslationDtoList = bagRepository.findAllActiveBagsByTariffsInfoId(tariffId).stream()
-            .map(bag -> modelMapper.map(bag, BagTranslationDto.class))
-            .sorted(Comparator.comparing(BagTranslationDto::getCapacity).reversed())
-            .toList();
+        List<BagTranslationDto> bagTranslationDtoList =
+            bagRepository.findAllActiveBagsByTariffsInfoId(tariffId).stream()
+                .map(bag -> modelMapper.map(bag, BagTranslationDto.class))
+                .sorted(Comparator.comparing(BagTranslationDto::getCapacity).reversed())
+                .toList();
         return new UserPointsAndAllBagsDto(bagTranslationDtoList, userPoints);
     }
 
@@ -536,70 +527,91 @@ public class UBSClientServiceImpl implements UBSClientService {
      */
     @Override
     @Transactional
-    public PaymentSystemResponse saveFullOrderToDB(OrderResponseDto dto, String uuid, Long orderId) {
-        User currentUser = userRepository.findByUuid(uuid);
-        if (!checkIfAddressMatchLocationArea(dto.getLocationId(), dto.getAddressId())) {
-            throw new AddressNotWithinLocationAreaException(ADDRESS_NOT_WITHIN_LOCATION_AREA_MESSAGE);
-        }
-
-        TariffsInfo tariffsInfo = tryToFindTariffsInfoByBagIds(getBagIds(dto.getBags()), dto.getLocationId());
-        List<OrderBag> bagsOrdered = new ArrayList<>();
+    public PaymentSystemResponse processNewOrder(OrderResponseDto dto, String uuid) {
+        validateOrderRequestAddress(dto);
 
         adjustPaymentDetails(dto);
 
-        long sumToPayWithoutDiscountInCoins =
-            formBagsToBeSavedAndCalculateOrderSum(bagsOrdered, dto.getBags(), tariffsInfo);
-        checkIfUserHaveEnoughPoints(currentUser.getCurrentPoints(), dto.getPointsToUse());
-        long sumToPayInCoins = reduceOrderSumDueToUsedPoints(sumToPayWithoutDiscountInCoins, dto.getPointsToUse());
+        Order order = modelMapper.map(dto, Order.class);
+        order.setOrderDate(LocalDateTime.now());
+        order.setOrderStatus(OrderStatus.FORMED);
+        order.setCounterOrderPaymentId(0L);
 
-        Order order = isExistOrder(dto, orderId);
-        if (orderId != null) {
-            checkIsOrderOfCurrentUser(currentUser, order);
-            if (order.getOrderStatus() != OrderStatus.FORMED
-                || order.getOrderPaymentStatus() != OrderPaymentStatus.UNPAID) {
-                throw new IllegalStateException(ORDER_STATUS_AND_PAYMENT_CONDITION_FAILED);
-            }
+        User currentUser = userRepository.findByUuid(uuid);
 
-            entityManager.clear();
+        OrderAddress orderAddress = formAndSaveOrderAddress(
+            dto.getAddressId(), dto.getLocationId(), currentUser);
 
-            currentUser = userRepository.findByUuid(uuid);
-            order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new NotFoundException(ORDER_NOT_FOUND_BY_ID + orderId));
+        UBSuser userData = formAndSaveUbsUser(
+            dto.getPersonalData(), null, orderAddress, currentUser);
 
-            orderBagRepository.deleteAllByOrderId(orderId);
+        order = formAndSaveOrderRequest(dto, order, currentUser, userData);
+        long sumToPayInCoins = getLastPayment(order).getAmount();
 
-            order.getOrderBags().clear();
-            order.updateWithNewOrderBags(bagsOrdered);
-            order.setPointsToUse(dto.getPointsToUse())
-                .setAdditionalOrders(dto.getAdditionalOrders())
-                .setComment(dto.getOrderComment())
-                .setTariffsInfo(tariffsInfo);
-        } else {
-            order.setOrderStatus(OrderStatus.FORMED);
-            order.setOrderDate(LocalDateTime.now());
-            order.setOrderPaymentStatus(OrderPaymentStatus.UNPAID);
-            order.updateWithNewOrderBags(bagsOrdered);
-        }
+        formAndSaveUser(currentUser, dto.getPointsToUse(), order);
 
-        Set<Certificate> orderCertificates = new HashSet<>();
-        sumToPayInCoins = formCertificatesToBeSavedAndCalculateOrderSum(dto, orderCertificates, order, sumToPayInCoins);
-        if (sumToPayInCoins <= 0) {
-            dto.setShouldBePaid(false);
-        }
+        saveOrderEvent(OrderHistory.ORDER_FORMED_UK, OrderHistory.CLIENT_UK, order);
 
-        UBSuser userData =
-            formUserDataToBeSaved(dto.getPersonalData(), dto.getAddressId(), dto.getLocationId(), currentUser);
-        order.setTariffsInfo(tariffsInfo);
-        getOrder(dto, currentUser, bagsOrdered, sumToPayInCoins, order, orderCertificates, userData);
+        PaymentSystemResponse paymentSystemResponse =
+            processPaymentResponse(dto, order, sumToPayInCoins);
 
-        String eventName = determineEventName(orderId);
-        saveOrderEvent(eventName, OrderHistory.CLIENT_UK, order);
-
-        PaymentSystemResponse paymentSystemResponse = processPaymentResponse(dto, order, sumToPayInCoins, currentUser);
-
-        handleOrderNotifications(order, orderId, sumToPayInCoins, paymentSystemResponse);
+        notificationService.notifyCreatedOrder(order);
 
         return paymentSystemResponse;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    @Transactional
+    public PaymentSystemResponse processExistingOrder(OrderResponseDto dto, String uuid, Long orderId) {
+        validateOrderRequestAddress(dto);
+
+        Order order = orderRepository.findById(orderId)
+            .orElseThrow(() -> new NotFoundException(ORDER_NOT_FOUND_BY_ID + orderId));
+
+        User currentUser = userRepository.findByUuid(uuid);
+        checkIsOrderOfCurrentUser(currentUser, order);
+
+        if (order.getOrderStatus() != OrderStatus.FORMED
+            || order.getOrderPaymentStatus() != OrderPaymentStatus.UNPAID) {
+            throw new BadRequestException(ORDER_STATUS_AND_PAYMENT_CONDITION_FAILED);
+        }
+
+        adjustPaymentDetails(dto);
+
+        order.setPointsToUse(dto.getPointsToUse());
+        order.setAdditionalOrders(dto.getAdditionalOrders());
+        order.setComment(dto.getOrderComment());
+
+        OrderAddress orderAddress = getOrUpdateOrderAddress(
+            order.getUbsUser().getOrderAddress(), dto.getAddressId(), dto.getLocationId(), currentUser);
+
+        UBSuser userData = formAndSaveUbsUser(
+            dto.getPersonalData(), order.getUbsUser().getId(), orderAddress, currentUser);
+
+        order = formAndSaveOrderRequest(dto, order, currentUser, userData);
+        long sumToPayInCoins = getLastPayment(order).getAmount();
+
+        formAndSaveUser(currentUser, dto.getPointsToUse(), order);
+
+        saveOrderEvent(OrderHistory.ORDER_STATUS_UPDATED_UK, OrderHistory.CLIENT_UK, order);
+
+        PaymentSystemResponse paymentSystemResponse =
+            processPaymentResponse(dto, order, sumToPayInCoins);
+
+        if (order.getOrderPaymentStatus() == OrderPaymentStatus.UNPAID) {
+            notificationService.notifyUnpaidOrderPermanently(order, sumToPayInCoins, paymentSystemResponse);
+        }
+
+        return paymentSystemResponse;
+    }
+
+    private void validateOrderRequestAddress(OrderResponseDto dto) {
+        if (!checkIfAddressMatchLocationArea(dto.getLocationId(), dto.getAddressId())) {
+            throw new AddressNotWithinLocationAreaException(ADDRESS_NOT_WITHIN_LOCATION_AREA_MESSAGE);
+        }
     }
 
     private void adjustPaymentDetails(OrderResponseDto dto) {
@@ -609,8 +621,28 @@ public class UBSClientServiceImpl implements UBSClientService {
         }
     }
 
-    private String determineEventName(Long orderId) {
-        return (orderId == null) ? OrderHistory.ORDER_FORMED_UK : OrderHistory.ORDER_STATUS_UPDATED_UK;
+    private Order formAndSaveOrderRequest(OrderResponseDto dto, Order order, User currentUser, UBSuser userData) {
+        TariffsInfo tariffsInfo = findTariffsInfoByBagIdsWithinLocation(getBagIds(dto.getBags()), dto.getLocationId());
+        List<OrderBag> bagsOrdered = new ArrayList<>();
+        long sumToPayInCoinsWithoutDiscount =
+            formBagsToBeSavedAndCalculateOrderSum(bagsOrdered, dto.getBags(), tariffsInfo);
+
+        checkIfUserHaveEnoughPoints(currentUser.getCurrentPoints(), dto.getPointsToUse());
+        long sumToPayInCoins = reduceOrderSumDueToUsedPoints(sumToPayInCoinsWithoutDiscount, dto.getPointsToUse());
+        if (sumToPayInCoinsWithoutDiscount == sumToPayInCoins) {
+            order.setPointsToUse(0);
+            dto.setPointsToUse(0);
+        }
+
+        Set<Certificate> orderCertificates = new HashSet<>();
+        sumToPayInCoins =
+            formCertificatesToBeSavedAndCalculateOrderSum(dto, orderCertificates, order, sumToPayInCoins);
+        if (sumToPayInCoins <= 0) {
+            dto.setShouldBePaid(false);
+        }
+
+        return formAndSaveOrder(order, orderCertificates, bagsOrdered, userData, currentUser, sumToPayInCoins,
+            tariffsInfo);
     }
 
     private void saveOrderEvent(String eventName, String author, Order order) {
@@ -618,30 +650,17 @@ public class UBSClientServiceImpl implements UBSClientService {
         log.info("Saved event: eventName={}, author={}, orderId={}", eventName, author, order.getId());
     }
 
-    private PaymentSystemResponse processPaymentResponse(OrderResponseDto dto, Order order, long sumToPayInCoins,
-        User currentUser) {
+    private PaymentSystemResponse processPaymentResponse(OrderResponseDto dto, Order order, long sumToPayInCoins) {
         if (dto.isShouldBePaid()) {
-            return processPayment(dto, order, sumToPayInCoins, currentUser);
+            return processPayment(dto, order, sumToPayInCoins);
         } else {
             return getPaymentRequestDto(order, "");
         }
     }
 
-    private void handleOrderNotifications(Order order, Long orderId, long sumToPayInCoins,
-        PaymentSystemResponse paymentSystemResponse) {
-        if (orderId == null) {
-            notificationService.notifyCreatedOrder(order);
-        }
-        if (order.getOrderPaymentStatus() == OrderPaymentStatus.UNPAID) {
-            notificationServiceImpl.notifyUnpaidOrderPermanently(order, sumToPayInCoins, paymentSystemResponse);
-        }
-    }
-
-    private PaymentSystemResponse processPayment(OrderResponseDto dto, Order order, long sumToPayInCoins,
-        User currentUser) {
+    private PaymentSystemResponse processPayment(OrderResponseDto dto, Order order, long sumToPayInCoins) {
         return switch (dto.getPaymentSystem()) {
             case WAY_FOR_PAY -> processWayForPay(order, sumToPayInCoins);
-            case MONOBANK -> processMonoBank(order, sumToPayInCoins, currentUser);
         };
     }
 
@@ -651,48 +670,9 @@ public class UBSClientServiceImpl implements UBSClientService {
         return getPaymentRequestDto(order, link);
     }
 
-    private PaymentSystemResponse processMonoBank(Order order, long sumToPayInCoins, User currentUser) {
-        MonoBankPaymentRequestDto requestDto =
-            formPaymentRequestForMonoBank(order.getId(), sumToPayInCoins, currentUser);
-        CheckoutResponseFromMonoBank checkoutResponse = monoBankClient.getCheckoutResponse(requestDto, token);
-        return getPaymentRequestDto(order, checkoutResponse.pageUrl());
-    }
-
-    private MonoBankPaymentRequestDto formPaymentRequestForMonoBank(Long orderId, long sumToPayInCoins, User user) {
-        Order order = orderRepository.findById(orderId)
-            .orElseThrow(() -> new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
-        return MonoBankPaymentRequestDto.builder()
-            .amount((int) sumToPayInCoins)
-            .merchantPaymentInfo(MerchantPaymentInfo.builder()
-                .orderReference(OrderUtils.generateEncodedOrderReference(orderId, order))
-                .emails(Set.of(user.getRecipientEmail()))
-                .orderList(getBasketOrders(order))
-                .build())
-            .redirectUrl(monoBankRedirectionUrl)
-            .webHookUrl(monoBankPaymentRedirectUrl)
-            .validity(VALIDITY_DURATION_TEN_DAYS)
-            .build();
-    }
-
-    private List<BasketOrder> getBasketOrders(Order order) {
-        return order.getOrderBags().stream()
-            .filter(bag -> bag.getAmount() != 0)
-            .map(this::convert)
-            .toList();
-    }
-
-    private BasketOrder convert(OrderBag bag) {
-        return BasketOrder.builder()
-            .name(bag.getNameUk())
-            .quantity(bag.getAmount().floatValue())
-            .sum((int) (bag.getPrice() * bag.getAmount()))
-            .code(bag.getNameUk())
-            .build();
-    }
-
     private boolean checkIfAddressMatchLocationArea(long locationId, long addressId) {
         Address address = addressRepo.findById(addressId)
-            .orElseThrow(() -> new EntityNotFoundException(ADDRESS_NOT_FOUND_BY_ID_MESSAGE + addressId));
+            .orElseThrow(() -> new NotFoundException(ADDRESS_NOT_FOUND_BY_ID_MESSAGE + addressId));
 
         boolean isKyivTariff = checkIfCityBelongsToKyivTariff(address.getBaseAddress().getCityEn());
 
@@ -733,7 +713,7 @@ public class UBSClientServiceImpl implements UBSClientService {
     private List<Integer> getBagIds(List<BagDto> dto) {
         return dto.stream()
             .map(BagDto::getId)
-            .collect(toList());
+            .toList();
     }
 
     private Bag findActiveBagById(Integer id) {
@@ -741,24 +721,10 @@ public class UBSClientServiceImpl implements UBSClientService {
             .orElseThrow(() -> new NotFoundException(BAG_NOT_FOUND + id));
     }
 
-    private TariffsInfo tryToFindTariffsInfoByBagIds(List<Integer> bagIds, Long locationId) {
+    private TariffsInfo findTariffsInfoByBagIdsWithinLocation(List<Integer> bagIds, Long locationId) {
         return tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(bagIds, locationId)
             .orElseThrow(
                 () -> new NotFoundException(String.format(TARIFF_FOR_BAGS_AT_LOCATION_NOT_EXIST, bagIds, locationId)));
-    }
-
-    private Order isExistOrder(OrderResponseDto dto, Long orderId) {
-        if (orderId != null) {
-            Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + orderId));
-            checkIsOrderPaid(order.getOrderPaymentStatus());
-            order.setPointsToUse(dto.getPointsToUse())
-                .setAdditionalOrders(dto.getAdditionalOrders())
-                .setComment(dto.getOrderComment());
-            return order;
-        } else {
-            return modelMapper.map(dto, Order.class);
-        }
     }
 
     private PaymentSystemResponse getPaymentRequestDto(Order order, String link) {
@@ -835,7 +801,7 @@ public class UBSClientServiceImpl implements UBSClientService {
         return getOrdersData(order);
     }
 
-    private OrdersDataForUserDto getOrdersData(Order order) {
+    public OrdersDataForUserDto getOrdersData(Order order) {
         List<Payment> payments = order.getPayment();
         List<BagForUserDto> bagForUserDtos = bagForUserDtosBuilder(order);
         OrderStatusTranslation orderStatusTranslation = orderStatusTranslationRepository
@@ -850,7 +816,7 @@ public class UBSClientServiceImpl implements UBSClientService {
 
         List<CertificateDto> certificateDtos = order.getCertificates().stream()
             .map(certificate -> modelMapper.map(certificate, CertificateDto.class))
-            .collect(toList());
+            .toList();
 
         Long amountWithDiscountInCoins = fullPriceInCoins
             - 100L * (order.getPointsToUse() + countCertificatesBonuses(certificateDtos));
@@ -920,7 +886,7 @@ public class UBSClientServiceImpl implements UBSClientService {
     }
 
     private AddressInfoDto addressInfoDtoBuilder(Order order) {
-        var address = order.getUbsUser().getOrderAddress();
+        OrderAddress address = order.getUbsUser().getOrderAddress();
         return AddressInfoDto.builder()
             .addressCityUk(address.getBaseAddress().getCityUk())
             .addressCityEn(address.getBaseAddress().getCityEn())
@@ -942,7 +908,7 @@ public class UBSClientServiceImpl implements UBSClientService {
         Map<Integer, Integer> actualBagsAmount = orderBagService.getActualBagsAmountForOrder(bagsAmountInOrder);
         return bagsAmountInOrder.stream()
             .map(orderBag -> buildBagForUserDto(orderBag, actualBagsAmount.get(orderBag.getBag().getId())))
-            .collect(toList());
+            .toList();
     }
 
     private BagForUserDto buildBagForUserDto(OrderBag orderBag, int count) {
@@ -966,7 +932,7 @@ public class UBSClientServiceImpl implements UBSClientService {
     @Transactional
     public UserInfoDto getUserAndUserUbsAndViolationsInfoByOrderId(Long orderId, String uuid) {
         UBSuser ubsUser = ubsUserRepository.findUbsUserByOrderId(orderId).orElseThrow(
-            () -> new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST));
+            () -> new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + orderId));
         User user = ubsUser.getUser();
         if (!Objects.equals(user.getUuid(), uuid)) {
             throw new AccessDeniedException(CANNOT_ACCESS_PERSONAL_INFO);
@@ -996,8 +962,8 @@ public class UBSClientServiceImpl implements UBSClientService {
      */
     @Override
     public UbsCustomersDto updateUbsUserInfoInOrder(UbsCustomersDtoUpdate dtoUpdate, String userUuid) {
-        var ubsUser = getUbsUserById(dtoUpdate.getRecipientId());
-        var authentication = SecurityContextHolder.getContext().getAuthentication();
+        UBSuser ubsUser = getUbsUserById(dtoUpdate.getCustomerId());
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
 
         checkUserHasAccessToUpdateData(ubsUser, userUuid, authentication);
 
@@ -1033,7 +999,7 @@ public class UBSClientServiceImpl implements UBSClientService {
     }
 
     private void checkUserHasAccessToUpdateData(UBSuser ubsUser, String userUuid, Authentication authentication) {
-        var uuid = ubsUser.getUser().getUuid();
+        String uuid = ubsUser.getUser().getUuid();
         if (checkUserRoleIsUser(authentication) && !(uuid.equals(userUuid))) {
             throw new AccessDeniedException(CANNOT_ACCESS_PERSONAL_INFO);
         }
@@ -1050,44 +1016,46 @@ public class UBSClientServiceImpl implements UBSClientService {
             throw new NotFoundException(USER_WITH_CURRENT_UUID_DOES_NOT_EXIST);
         }
         User user = userRepository.findByUuid(userProfileCreateDto.getUuid());
-        if (user == null) {
-            user = userRepository.save(User.builder()
-                .uuid(userProfileCreateDto.getUuid())
-                .recipientEmail(userProfileCreateDto.getEmail())
-                .recipientName(userProfileCreateDto.getName())
-                .currentPoints(0)
-                .violations(0)
-                .dateOfRegistration(LocalDate.now()).build());
+        if (user != null) {
+            throw new BadRequestException(USER_WITH_CURRENT_UUID_ALREADY_EXISTS_IN_UBS);
         }
+        user = userRepository.save(User.builder()
+            .uuid(userProfileCreateDto.getUuid())
+            .recipientEmail(userProfileCreateDto.getEmail())
+            .recipientName(userProfileCreateDto.getName())
+            .currentPoints(0)
+            .violations(0)
+            .dateOfRegistration(LocalDate.now()).build());
         return user.getId();
     }
 
     private UBSuser updateRecipientDataInOrder(UBSuser ubsUser, UbsCustomersDtoUpdate dto) {
-        if (nonNull(dto.getRecipientEmail())) {
-            ubsUser.setSenderEmail(dto.getRecipientEmail());
+        if (nonNull(dto.getCustomerEmail())) {
+            ubsUser.setSenderEmail(dto.getCustomerEmail());
         }
-        if (nonNull(dto.getRecipientName())) {
-            ubsUser.setSenderFirstName(dto.getRecipientName());
+        if (nonNull(dto.getCustomerName())) {
+            ubsUser.setSenderFirstName(dto.getCustomerName());
         }
-        if (nonNull(dto.getRecipientSurName())) {
-            ubsUser.setSenderLastName(dto.getRecipientSurName());
+        if (nonNull(dto.getCustomerSurname())) {
+            ubsUser.setSenderLastName(dto.getCustomerSurname());
         }
-        if (nonNull(dto.getRecipientPhoneNumber())) {
-            ubsUser.setSenderPhoneNumber(dto.getRecipientPhoneNumber());
+        if (nonNull(dto.getCustomerPhoneNumber())) {
+            ubsUser.setSenderPhoneNumber(dto.getCustomerPhoneNumber());
         }
 
         return ubsUser;
     }
 
-    private void formAndSaveOrder(Order order, Set<Certificate> orderCertificates,
-        List<OrderBag> bagsOrdered, UBSuser userData,
-        User currentUser, long sumToPayInCoins) {
-        order.setOrderStatus(OrderStatus.FORMED);
+    private Order formAndSaveOrder(
+        Order order, Set<Certificate> orderCertificates, List<OrderBag> bagsOrdered,
+        UBSuser userData, User currentUser, long sumToPayInCoins, TariffsInfo tariffsInfo) {
+        order.setTariffsInfo(tariffsInfo);
         order.setCertificates(orderCertificates);
-        order.updateWithNewOrderBags(bagsOrdered);
+        order.setOrderBags(bagsOrdered);
         order.setUbsUser(userData);
         order.setUser(currentUser);
         order.setSumTotalAmountWithoutDiscounts(calculateOrderSumWithoutDiscounts(bagsOrdered));
+        order.setCounterOrderPaymentId(order.getCounterOrderPaymentId() + 1);
         setOrderPaymentStatus(order, sumToPayInCoins);
 
         Payment payment = Payment.builder()
@@ -1102,7 +1070,7 @@ public class UBSClientServiceImpl implements UBSClientService {
             order.setPayment(new ArrayList<>());
         }
         order.getPayment().add(payment);
-        orderRepository.save(order);
+        return orderRepository.save(order);
     }
 
     private void setOrderPaymentStatus(Order order, long sumToPay) {
@@ -1144,6 +1112,7 @@ public class UBSClientServiceImpl implements UBSClientService {
                 .map(OrderBag::getAmount)
                 .filter(amount -> amount != 0)
                 .toList())
+            .returnUrl(greenCityClientUrl)
             .build();
 
         paymentWayForPayRequestDto.setSignature(encryptionUtil
@@ -1159,36 +1128,33 @@ public class UBSClientServiceImpl implements UBSClientService {
             .doubleValue();
     }
 
-    private UBSuser formUserDataToBeSaved(PersonalDataDto dto, Long addressId, Long locationId, User currentUser) {
-        UBSuser ubsUserFromDatabaseById = null;
-        if (dto.getUbsUserId() != null) {
-            ubsUserFromDatabaseById =
-                ubsUserRepository.findById(dto.getUbsUserId())
-                    .orElseThrow(() -> new BadRequestException(THE_SET_OF_UBS_USER_DATA_DOES_NOT_EXIST
-                        + dto.getUbsUserId()));
-        }
-        UBSuser mappedFromDtoUser = modelMapper.map(dto, UBSuser.class);
-        mappedFromDtoUser.setUser(currentUser);
-        mappedFromDtoUser.setPhoneNumber(
-            UAPhoneNumberUtil.getE164PhoneNumberFormat(mappedFromDtoUser.getPhoneNumber()));
-        if (mappedFromDtoUser.getId() == null || !mappedFromDtoUser.equals(ubsUserFromDatabaseById)) {
-            mappedFromDtoUser.setId(null);
-            mappedFromDtoUser.setOrderAddress(saveOrderAddressWithLocation(addressId, locationId, currentUser));
-            if (mappedFromDtoUser.getOrderAddress().getBaseAddress().getAddressComment() == null) {
-                mappedFromDtoUser.getOrderAddress().getBaseAddress().setAddressComment(dto.getAddressComment());
-            }
-            ubsUserRepository.save(mappedFromDtoUser);
-            currentUser.getUbsUsers().add(mappedFromDtoUser);
+    private UBSuser formAndSaveUbsUser(
+        PersonalDataDto dto, Long id, OrderAddress orderAddress, User currentUser) {
+        UBSuser userData = modelMapper.map(dto, UBSuser.class);
+        userData.setId(id);
+        userData.setUser(currentUser);
+        userData.setPhoneNumber(
+            UAPhoneNumberUtil.getE164PhoneNumberFormat(userData.getPhoneNumber()));
+        userData.setOrderAddress(orderAddress);
+        userData = ubsUserRepository.save(userData);
 
-            currentUser.setRecipientSurname(dto.getLastName());
-            currentUser.setRecipientName(dto.getFirstName());
-            currentUser.setRecipientPhone(dto.getPhoneNumber());
+        currentUser.getUbsUsers().add(userData);
+        currentUser.setRecipientSurname(dto.getLastName());
+        currentUser.setRecipientName(dto.getFirstName());
+        currentUser.setRecipientPhone(dto.getPhoneNumber());
+        userRepository.save(currentUser);
 
-            userRepository.save(currentUser);
-            return mappedFromDtoUser;
-        } else {
-            return ubsUserFromDatabaseById;
+        return userData;
+    }
+
+    private OrderAddress getOrUpdateOrderAddress(
+        OrderAddress currentOrderAddress, Long newAddressId, Long newLocationId, User currentUser) {
+        OrderAddress newOrderAddress = formOrderAddress(newAddressId, newLocationId, currentUser);
+        newOrderAddress.setId(currentOrderAddress.getId());
+        if (currentOrderAddress.equals(newOrderAddress)) {
+            return currentOrderAddress;
         }
+        return orderAddressRepository.save(newOrderAddress);
     }
 
     /**
@@ -1234,7 +1200,7 @@ public class UBSClientServiceImpl implements UBSClientService {
                 sumToPayInCoins -= certificate.getPoints() * 100L;
                 certificate.setCertificateStatus(CertificateStatus.USED);
                 certificate.setDateOfUse(LocalDate.now());
-                if (dontSendLinkToFondyIf(sumToPayInCoins, certificate)) {
+                if (markCertificateAsUsedIfNoPaymentNeeded(sumToPayInCoins, certificate)) {
                     sumToPayInCoins = 0L;
                 }
             }
@@ -1242,7 +1208,7 @@ public class UBSClientServiceImpl implements UBSClientService {
         return sumToPayInCoins;
     }
 
-    private boolean dontSendLinkToFondyIf(long sumToPayInCoins, Certificate certificate) {
+    private boolean markCertificateAsUsedIfNoPaymentNeeded(long sumToPayInCoins, Certificate certificate) {
         if (sumToPayInCoins <= 0) {
             certificate.setCertificateStatus(CertificateStatus.USED);
             certificate.setPoints(certificate.getPoints()
@@ -1260,7 +1226,7 @@ public class UBSClientServiceImpl implements UBSClientService {
                 throw new BadRequestException(NOT_ENOUGH_BAGS_EXCEPTION + courierLocation.getMin());
             }
             if (courierLocation.getMax() != null && courierLocation.getMax() < countOfBigBag) {
-                throw new BadRequestException(TO_MUCH_BAG_EXCEPTION + courierLocation.getMax());
+                throw new BadRequestException(TOO_MANY_BAGS_EXCEPTION + courierLocation.getMax());
             }
         }
     }
@@ -1343,7 +1309,7 @@ public class UBSClientServiceImpl implements UBSClientService {
             bonusForUbsUser = changeOfPointsList.stream()
                 .sorted(Comparator.comparing(ChangeOfPoints::getDate).reversed())
                 .map(m -> modelMapper.map(m, PointsForUbsUserDto.class))
-                .collect(toList());
+                .toList();
         }
         AllPointsUserDto allBonusesForUserDto = new AllPointsUserDto();
         allBonusesForUserDto.setUserBonuses(userBonuses);
@@ -1359,7 +1325,7 @@ public class UBSClientServiceImpl implements UBSClientService {
         Optional<Order> order = orderRepository.findById(orderId);
 
         if (order.isEmpty()) {
-            throw new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST);
+            throw new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST + orderId);
         }
 
         List<Event> orderEvents = eventRepository.findAllEventsByOrderId(orderId);
@@ -1401,8 +1367,7 @@ public class UBSClientServiceImpl implements UBSClientService {
         User user = userRepository.findUserByUuid(uuid)
             .orElseThrow(() -> new NotFoundException(USER_WITH_CURRENT_UUID_DOES_NOT_EXIST));
         setUserData(user, userProfileUpdateDto);
-        setTelegramAndViberBots(user, userProfileUpdateDto.getTelegramIsNotify(),
-            userProfileUpdateDto.getViberIsNotify());
+        setTelegramBot(user, userProfileUpdateDto.getTelegramIsNotify());
         userProfileUpdateDto.getAddressDto().stream()
             .map(a -> modelMapper.map(a, OrderAddressDtoRequest.class))
             .forEach(addressRequestDto -> addressService.updateCurrentAddressForOrder(addressRequestDto, uuid));
@@ -1420,7 +1385,7 @@ public class UBSClientServiceImpl implements UBSClientService {
         List<AddressDto> addressDto =
             allAddress.stream()
                 .map(a -> modelMapper.map(a, AddressDto.class))
-                .collect(toList());
+                .toList();
         userProfileDto.setAddressDto(addressDto);
         userProfileDto.setBotList(botList);
         userProfileDto.setHasPassword(userRemoteClient.getPasswordStatus().isHasPassword());
@@ -1436,16 +1401,11 @@ public class UBSClientServiceImpl implements UBSClientService {
             (phone == null || phone.trim().isEmpty()) ? null : UAPhoneNumberUtil.getE164PhoneNumberFormat(phone));
     }
 
-    private void setTelegramAndViberBots(User user, Boolean telegramIsNotify, Boolean viberIsNotify) {
-        TelegramBot telegramBot = telegramBotRepository.findByUser(user).orElse(null);
-        ViberBot viberBot = viberBotRepository.findByUser(user).orElse(null);
+    private void setTelegramBot(User user, Boolean telegramIsNotify) {
+        TelegramChat telegramBot = telegramBotRepository.findByUser(user).orElse(null);
         if (telegramBot != null) {
             telegramBot.setIsNotify(telegramIsNotify);
             user.setTelegramBot(telegramBot);
-        }
-        if (viberBot != null) {
-            viberBot.setIsNotify(viberIsNotify);
-            user.setViberBot(viberBot);
         }
     }
 
@@ -1478,29 +1438,21 @@ public class UBSClientServiceImpl implements UBSClientService {
         return sumToPayInCoins;
     }
 
-    private void getOrder(OrderResponseDto dto, User currentUser, List<OrderBag> amountOfBagsOrdered,
-        long sumToPayInCoins, Order order, Set<Certificate> orderCertificates, UBSuser userData) {
-        formAndSaveOrder(order, orderCertificates, amountOfBagsOrdered, userData, currentUser, sumToPayInCoins);
-
-        formAndSaveUser(currentUser, dto.getPointsToUse(), order);
+    private OrderAddress formAndSaveOrderAddress(Long addressId, Long locationId, User currentUser) {
+        return orderAddressRepository.save(formOrderAddress(addressId, locationId, currentUser));
     }
 
-    private OrderAddress saveOrderAddressWithLocation(Long addressId, Long locationId, User currentUser) {
-        var address = addressRepo.findById(addressId)
+    private OrderAddress formOrderAddress(Long addressId, Long locationId, User currentUser) {
+        Address address = addressRepo.findById(addressId)
             .orElseThrow(() -> new NotFoundException(NOT_FOUND_ADDRESS_ID_FOR_CURRENT_USER + addressId));
-
-        var location = locationRepository.findById(locationId)
+        Location location = locationRepository.findById(locationId)
             .orElseThrow(() -> new NotFoundException(LOCATION_DOESNT_FOUND_BY_ID + locationId));
 
         checkIfAddressHasBeenDeleted(address);
-
         checkAddressUser(address, currentUser);
 
-        var orderAddress = modelMapper.map(address, OrderAddress.class);
-
-        location.addOrderAddress(orderAddress);
-
-        orderAddressRepository.save(orderAddress);
+        OrderAddress orderAddress = modelMapper.map(address, OrderAddress.class);
+        orderAddress.setLocation(location);
 
         return orderAddress;
     }
@@ -1513,7 +1465,7 @@ public class UBSClientServiceImpl implements UBSClientService {
             throw new NotFoundException(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST);
         }
         order.getOrderBags().clear();
-        orderRepository.save(order);
+        orderRepository.saveAndFlush(order);
         orderRepository.delete(order);
     }
 
@@ -1522,12 +1474,6 @@ public class UBSClientServiceImpl implements UBSClientService {
             .movePointRight(AppConstant.TWO_DECIMALS_AFTER_POINT_IN_CURRENCY)
             .setScale(AppConstant.NO_DECIMALS_AFTER_POINT_IN_CURRENCY, RoundingMode.HALF_UP)
             .longValue();
-    }
-
-    private void checkIsOrderPaid(OrderPaymentStatus orderPaymentStatus) {
-        if (OrderPaymentStatus.PAID.equals(orderPaymentStatus)) {
-            throw new BadRequestException(ORDER_ALREADY_PAID);
-        }
     }
 
     private String getLinkFromWayForPayCheckoutResponse(String wayForPayResponse) {
@@ -1541,6 +1487,8 @@ public class UBSClientServiceImpl implements UBSClientService {
             order.setOrderPaymentStatus(OrderPaymentStatus.UNPAID);
             paymentRepository.save(orderPayment);
             orderRepository.save(order);
+            log.info("Payment failed: orderId={}, transactionStatus={}, paymentStatus={}",
+                order.getId(), dto.getTransactionStatus(), orderPayment.getPaymentStatus());
         }
     }
 
@@ -1559,6 +1507,11 @@ public class UBSClientServiceImpl implements UBSClientService {
             eventService.save(OrderHistory.ORDER_PAID_UK, OrderHistory.SYSTEM_UK, order);
             eventService.save(OrderHistory.ADD_PAYMENT_SYSTEM_UK + orderPayment.getPaymentId(),
                 OrderHistory.SYSTEM_UK, order);
+            log.info("Payment approved: orderId={}, status={}",
+                order.getId(), orderPayment.getPaymentStatus());
+        } else {
+            log.info("Payment not approved: orderId={}, transactionStatus={}",
+                order.getId(), dto.getTransactionStatus());
         }
     }
 
@@ -1574,7 +1527,7 @@ public class UBSClientServiceImpl implements UBSClientService {
         return EnumSet.allOf(BotType.class)
             .stream()
             .map(type -> new Bot(type.name(), createLink(type, uuid)))
-            .collect(toList());
+            .toList();
     }
 
     private String createLink(BotType type, String uuid) {
@@ -1582,10 +1535,6 @@ public class UBSClientServiceImpl implements UBSClientService {
         if ("TELEGRAM".equals(type.name())) {
             linkTemplate = String.format("%s%s%s%s",
                 TELEGRAM_PART_1_OF_LINK, telegramBotName, TELEGRAM_PART_3_OF_LINK, uuid);
-        }
-        if ("VIBER".equals(type.name())) {
-            linkTemplate = String.format("%s%s%s%s",
-                VIBER_PART_1_OF_LINK, viberBotUri, VIBER_PART_3_OF_LINK, uuid);
         }
         return linkTemplate;
     }
@@ -1620,7 +1569,7 @@ public class UBSClientServiceImpl implements UBSClientService {
                 .nameUk(x.getKey().getNameUk())
                 .locations(x.getValue())
                 .build())
-            .collect(toList());
+            .toList();
     }
 
     @Override
@@ -1661,7 +1610,9 @@ public class UBSClientServiceImpl implements UBSClientService {
         if (!courierRepository.existsCourierById(courierId)) {
             throw new NotFoundException(COURIER_IS_NOT_FOUND_BY_ID + courierId);
         }
-
+        if (!locationRepository.existsById(locationId)) {
+            throw new NotFoundException(LOCATION_DOESNT_FOUND_BY_ID + locationId);
+        }
         return TariffInfoByLocationDto.builder()
             .orderIsPresent(true)
             .tariffsForLocationDto(modelMapper.map(
@@ -1675,7 +1626,7 @@ public class UBSClientServiceImpl implements UBSClientService {
         if (tariffsInfo.isPresent()) {
             return modelMapper.map(tariffsInfo.get(), TariffsForLocationDto.class);
         } else {
-            throw new EntityNotFoundException(TARIFF_FOR_ORDER_NOT_EXIST + id);
+            throw new NotFoundException(TARIFF_FOR_ORDER_NOT_EXIST + id);
         }
     }
 
@@ -1723,7 +1674,8 @@ public class UBSClientServiceImpl implements UBSClientService {
         }
     }
 
-    private String formedLink(Order order, long sumToPayInCoins) {
+    @Override
+    public String formedLink(Order order, long sumToPayInCoins) {
         Order increment = incrementCounter(order);
         PaymentWayForPayRequestDto paymentWayForPayRequestDto =
             formPaymentRequestForWayForPay(increment.getId(), sumToPayInCoins);
@@ -1768,6 +1720,7 @@ public class UBSClientServiceImpl implements UBSClientService {
                 .amount(-pointsToUse)
                 .date(LocalDateTime.now())
                 .order(order)
+                .reason(BonusReason.DEBIT_PAYMENT)
                 .build());
 
         orderRepository.save(order);
@@ -1793,7 +1746,7 @@ public class UBSClientServiceImpl implements UBSClientService {
 
         List<CertificateDto> certificateDtos = order.getCertificates().stream()
             .map(certificate -> modelMapper.map(certificate, CertificateDto.class))
-            .collect(toList());
+            .toList();
 
         sumToPayInCoins = sumToPayInCoins - 100L * (order.getPointsToUse() + countCertificatesBonuses(certificateDtos));
 
@@ -1880,7 +1833,7 @@ public class UBSClientServiceImpl implements UBSClientService {
     @Override
     public List<LocationsDto> getAllLocations() {
         List<Location> allActiveLocations = locationRepository.findAllActiveLocations();
-        return allActiveLocations.stream().map(locationToLocationsDtoMapper::convert).collect(toList());
+        return allActiveLocations.stream().map(locationToLocationsDtoMapper::convert).toList();
     }
 
     /**
@@ -1900,114 +1853,17 @@ public class UBSClientServiceImpl implements UBSClientService {
 
     @Override
     public List<LocationsDto> getAllLocationsByCourierId(Long courierId) {
+        if (!courierRepository.existsCourierById(courierId)) {
+            throw new NotFoundException(COURIER_IS_NOT_FOUND_BY_ID + courierId);
+        }
         List<Location> locations = locationRepository.findAllActiveLocationsByCourierId(courierId);
         return locations.stream()
             .map(locationToLocationsDtoMapper::convert)
             .map(locationsDto -> locationsDto.setTariffsId(
                 tariffsInfoRepository.findTariffIdByLocationIdAndCourierId(locationsDto.getId(), courierId)
                     .orElseThrow(() -> new NotFoundException(
-                        String.format(TARIFF_NOT_FOUND_BY_LOCATION_ID, locationsDto.getId())))))
-            .collect(toList());
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    @Transactional
-    public void validatePaymentFromMonoBank(MonoBankPaymentResponseDto response) {
-        String decodedOrderReference = OrderUtils.decodeOrderReference(response.getOrderReference());
-        String[] ids = decodedOrderReference.split("_");
-        Order order = orderRepository.findById(Long.valueOf(ids[0]))
-            .orElseThrow(() -> new BadRequestException(PAYMENT_VALIDATION_ERROR));
-        Payment payment = createPayment(response, order, decodedOrderReference);
-        checkPaymentResponseStatus(response, payment, order);
-    }
-
-    private Payment createPayment(MonoBankPaymentResponseDto response, Order order, String decodedOrderReference) {
-        PaymentInfo paymentInfo = Optional.ofNullable(response.getPaymentInfo()).orElseGet(() -> PaymentInfo.builder()
-            .cardNumber(DEFAULT_VALUE_FOR_PAYMENT)
-            .paymentSystem(DEFAULT_VALUE_FOR_PAYMENT)
-            .paymentMethod(DEFAULT_VALUE_FOR_PAYMENT)
-            .fee(0)
-            .terminal(DEFAULT_VALUE_FOR_PAYMENT)
-            .build());
-        return Payment.builder()
-            .id(extractIdFromReference(decodedOrderReference))
-            .currency("UAH")
-            .amount((long) response.getAmount())
-            .orderStatus(OrderStatus.FORMED)
-            .responseStatus(response.getStatus())
-            .senderCellPhone(order.getUser().getRecipientPhone())
-            .maskedCard(paymentInfo.cardNumber())
-            .cardType(paymentInfo.paymentSystem())
-            .responseCode(parseErrorCode(response.getErrorCode()))
-            .responseDescription(Optional.ofNullable(response.getFailureReason()).orElse("0"))
-            .orderTime(formatDate(response.getCreatedDate()))
-            .settlementDate(formatDate(response.getModifiedDate()))
-            .fee(paymentInfo.fee().longValue())
-            .paymentSystem(paymentInfo.paymentSystem())
-            .senderEmail(order.getUser().getRecipientEmail())
-            .paymentId(response.getInvoiceId())
-            .order(order)
-            .paymentType(PaymentType.AUTO)
-            .paymentStatus(PaymentStatus.UNPAID)
-            .build();
-    }
-
-    private Long extractIdFromReference(String decodedOrderReference) {
-        return Long.valueOf(decodedOrderReference.substring(decodedOrderReference.lastIndexOf("_") + 1));
-    }
-
-    private int parseErrorCode(String errorCode) {
-        return (errorCode == null) ? 0 : Integer.parseInt(errorCode);
-    }
-
-    private String formatDate(String modifiedDate) {
-        return OffsetDateTime.parse(modifiedDate).format(DateTimeFormatter.ISO_LOCAL_DATE);
-    }
-
-    private void checkPaymentResponseStatus(MonoBankPaymentResponseDto response, Payment payment, Order order) {
-        MonoBankStatuses status = MonoBankStatuses.valueOf(response.getStatus().toUpperCase());
-
-        switch (status) {
-            case SUCCESS -> {
-                updatePaymentAndOrderStatus(payment, order, PaymentStatus.PAID, OrderPaymentStatus.PAID);
-                logPaymentEvent(order, payment.getPaymentId());
-                removePaymentLinkForOrder(order);
-            }
-            case REVERSED -> {
-                updatePaymentAndOrderStatus(payment, order, PaymentStatus.UNPAID, OrderPaymentStatus.UNPAID);
-                logOrderEvent(order, OrderHistory.PAYMENT_REVERSED_UK);
-            }
-            case PROCESSING -> {
-                updatePaymentAndOrderStatus(payment, order, PaymentStatus.UNPAID, OrderPaymentStatus.UNPAID);
-                logOrderEvent(order, OrderHistory.PAYMENT_PENDING_UK);
-            }
-            case FAILURE -> {
-                updatePaymentAndOrderStatus(payment, order, PaymentStatus.UNPAID, OrderPaymentStatus.UNPAID);
-                logOrderEvent(order, OrderHistory.PAYMENT_FAILURE_UK);
-            }
-            default -> updatePaymentAndOrderStatus(payment, order, PaymentStatus.UNPAID, OrderPaymentStatus.UNPAID);
-        }
-
-        paymentRepository.save(payment);
-        orderRepository.save(order);
-    }
-
-    private void updatePaymentAndOrderStatus(Payment payment, Order order, PaymentStatus paymentStatus,
-        OrderPaymentStatus orderStatus) {
-        payment.setPaymentStatus(paymentStatus);
-        order.setOrderPaymentStatus(orderStatus);
-    }
-
-    private void logOrderEvent(Order order, String event) {
-        eventService.save(event, OrderHistory.SYSTEM_UK, order);
-    }
-
-    private void logPaymentEvent(Order order, String paymentId) {
-        eventService.save(OrderHistory.ORDER_PAID_UK, OrderHistory.SYSTEM_UK, order);
-        eventService.save(OrderHistory.ADD_PAYMENT_SYSTEM_UK + paymentId, OrderHistory.SYSTEM_UK, order);
+                        String.format(TARIFF_FOR_COURIER_AND_LOCATION_NOT_EXIST, locationsDto.getId(), courierId)))))
+            .toList();
     }
 
     private void removePaymentLinkForOrder(Order order) {
