@@ -3,6 +3,7 @@ package greencity.service.ubs;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import greencity.ModelUtils;
 import greencity.client.UserRemoteClient;
+import greencity.client.config.UserRemoteWebClient;
 import greencity.constant.OrderHistory;
 import greencity.dto.bag.AdditionalBagInfoDto;
 import greencity.dto.bag.BagInfoDto;
@@ -10,7 +11,6 @@ import greencity.dto.bag.BagMappingDto;
 import greencity.dto.bag.ReasonNotTakeBagDto;
 import greencity.dto.certificate.CertificateDtoForSearching;
 import greencity.dto.employee.EmployeePositionDtoRequest;
-import greencity.dto.order.AdminCommentDto;
 import greencity.dto.order.CounterOrderDetailsDto;
 import greencity.dto.order.DetailsOrderInfoDto;
 import greencity.dto.order.EcoNumberDto;
@@ -28,6 +28,7 @@ import greencity.dto.pageble.PageableDto;
 import greencity.dto.payment.PaymentInfoDto;
 import greencity.dto.user.AddingPointsToUserDto;
 import greencity.dto.violation.ViolationsInfoDto;
+import greencity.entity.order.Bag;
 import greencity.entity.order.Certificate;
 import greencity.entity.order.Order;
 import greencity.entity.order.OrderPaymentStatusTranslation;
@@ -52,7 +53,6 @@ import greencity.repository.EmployeeOrderPositionRepository;
 import greencity.repository.EmployeeRepository;
 import greencity.repository.EventRepository;
 import greencity.repository.NotificationParameterRepository;
-import greencity.repository.OrderAddressRepository;
 import greencity.repository.OrderBagRepository;
 import greencity.repository.OrderDetailRepository;
 import greencity.repository.OrderPaymentStatusTranslationRepository;
@@ -61,13 +61,14 @@ import greencity.repository.OrderStatusTranslationRepository;
 import greencity.repository.PaymentRepository;
 import greencity.repository.PositionRepository;
 import greencity.repository.ReceivingStationRepository;
-import greencity.repository.RefundRepository;
 import greencity.repository.ServiceRepository;
 import greencity.repository.TariffsInfoRepository;
 import greencity.repository.UserNotificationRepository;
 import greencity.repository.UserRepository;
-import greencity.service.locations.LocationApiService;
+import greencity.repository.CityRepository;
+import greencity.repository.DistrictRepository;
 import greencity.service.notification.NotificationServiceImpl;
+import java.util.HashMap;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -75,6 +76,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
@@ -104,68 +106,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Stream;
 
-import static greencity.ModelUtils.ORDER_DETAIL_STATUS_DTO;
-import static greencity.ModelUtils.TEST_ADDITIONAL_BAG_INFO_DTO;
-import static greencity.ModelUtils.TEST_ADDITIONAL_BAG_INFO_DTO_LIST;
-import static greencity.ModelUtils.TEST_BAG;
-import static greencity.ModelUtils.TEST_BAG_INFO_DTO;
-import static greencity.ModelUtils.TEST_BAG_LIST;
-import static greencity.ModelUtils.TEST_BAG_MAPPING_DTO_LIST;
-import static greencity.ModelUtils.TEST_MAP_ADDITIONAL_BAG_LIST;
-import static greencity.ModelUtils.TEST_ORDER;
-import static greencity.ModelUtils.TEST_ORDER_DETAILS_INFO_DTO_LIST;
-import static greencity.ModelUtils.TEST_PAYMENT_LIST;
-import static greencity.ModelUtils.TEST_USER;
-import static greencity.ModelUtils.UPDATE_ORDER_PAGE_ADMIN_DTO;
-import static greencity.ModelUtils.getAdminCommentDto;
-import static greencity.ModelUtils.getAdminEmployee;
-import static greencity.ModelUtils.getBagInfoDto;
-import static greencity.ModelUtils.getBaglist;
-import static greencity.ModelUtils.getCertificateList;
-import static greencity.ModelUtils.getEcoNumberDto;
-import static greencity.ModelUtils.getEmployee;
-import static greencity.ModelUtils.getExportDetailsRequest;
-import static greencity.ModelUtils.getExportDetailsRequestToday;
-import static greencity.ModelUtils.getFormedOrder;
-import static greencity.ModelUtils.getInfoPayment;
-import static greencity.ModelUtils.getNotificationParameterSet;
-import static greencity.ModelUtils.getOrder;
-import static greencity.ModelUtils.getOrderBag;
-import static greencity.ModelUtils.getOrderDoneByUser;
-import static greencity.ModelUtils.getOrderExportDetails;
-import static greencity.ModelUtils.getOrderExportDetailsWithDeliverFromTo;
-import static greencity.ModelUtils.getOrderExportDetailsWithExportDate;
-import static greencity.ModelUtils.getOrderExportDetailsWithExportDateDeliverFrom;
-import static greencity.ModelUtils.getOrderExportDetailsWithExportDateDeliverFromTo;
-import static greencity.ModelUtils.getOrderExportDetailsWithNullValues;
-import static greencity.ModelUtils.getOrderForGetOrderStatusData2Test;
-import static greencity.ModelUtils.getOrderForGetOrderStatusEmptyPriceDetails;
-import static greencity.ModelUtils.getOrderStatusPaymentTranslations;
-import static greencity.ModelUtils.getOrderStatusTranslation;
-import static greencity.ModelUtils.getOrderStatusTranslations;
-import static greencity.ModelUtils.getOrderUserFirst;
-import static greencity.ModelUtils.getOrderWithPaymentStatus;
-import static greencity.ModelUtils.getOrdersStatusBROUGHT_IT_HIMSELFDto;
-import static greencity.ModelUtils.getOrdersStatusCanceledDto;
-import static greencity.ModelUtils.getOrdersStatusConfirmedDto;
-import static greencity.ModelUtils.getOrdersStatusDoneDto;
-import static greencity.ModelUtils.getOrdersStatusFormedDto;
-import static greencity.ModelUtils.getOrdersStatusFormedDto2;
-import static greencity.ModelUtils.getOrdersStatusNotTakenOutDto;
-import static greencity.ModelUtils.getOrdersStatusOnThe_RouteDto;
-import static greencity.ModelUtils.getPayment;
-import static greencity.ModelUtils.getPaymentTableInfoDto;
-import static greencity.ModelUtils.getReceivingList;
-import static greencity.ModelUtils.getReceivingStation;
-import static greencity.ModelUtils.getService;
-import static greencity.ModelUtils.getStatusTranslation;
-import static greencity.ModelUtils.getTariffsInfo;
-import static greencity.ModelUtils.getTestDetailsOrderInfoDto;
-import static greencity.ModelUtils.getTestOrderDetailStatusRequestDto;
-import static greencity.ModelUtils.getTestUser;
-import static greencity.ModelUtils.getUserNotificationForUnpaidOrder;
-import static greencity.ModelUtils.updateAllOrderPageDto;
-import static greencity.ModelUtils.updateOrderPageAdminDto;
+import static greencity.ModelUtils.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -177,8 +118,10 @@ import static org.mockito.Mockito.anyLong;
 import static org.mockito.Mockito.anyString;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.eq;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -186,82 +129,50 @@ import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class UBSManagementServiceImplTest {
-    @Mock(strictness = Mock.Strictness.LENIENT)
-    OrderAddressRepository orderAddressRepository;
-
     @Mock
-    private FileService fileService;
-
+    private UserRemoteWebClient userRemoteWebClient;
     @Mock(strictness = Mock.Strictness.LENIENT)
     OrderRepository orderRepository;
-
     @Mock
     UserRepository userRepository;
-
     @Mock
     CertificateRepository certificateRepository;
-
     @Mock(strictness = Mock.Strictness.LENIENT)
     private ModelMapper modelMapper;
-
     @Mock
     private ReceivingStationRepository receivingStationRepository;
-
     @Mock
     private PaymentRepository paymentRepository;
-
     @Mock
     private EmployeeOrderPositionRepository employeeOrderPositionRepository;
-
     @Mock
     private PositionRepository positionRepository;
-
     @Mock
     private EmployeeRepository employeeRepository;
-
     @Mock
     private BagRepository bagRepository;
-
     @Mock
     private UserRemoteClient userRemoteClient;
-
     @Mock(strictness = Mock.Strictness.LENIENT)
     private NotificationServiceImpl notificationService;
     @Mock
     private ObjectMapper objectMapper;
-
     @Mock
     private OrderDetailRepository orderDetailRepository;
-
-    @InjectMocks
-    private UBSManagementServiceImpl ubsManagementService;
-
     @Mock
     private EventService eventService;
-
     @Mock
     private OrderStatusTranslationRepository orderStatusTranslationRepository;
-
     @Mock
     private OrderPaymentStatusTranslationRepository orderPaymentStatusTranslationRepository;
-
     @Mock
     private UBSClientServiceImpl ubsClientService;
-
     @Mock
     private ServiceRepository serviceRepository;
-
     @Mock
     OrdersAdminsPageService ordersAdminsPageService;
-
     @Mock
     TariffsInfoRepository tariffsInfoRepository;
-
-    @Mock
-    private LocationApiService locationApiService;
-
-    @Mock
-    RefundRepository refundRepository;
     @Mock
     private OrderBagService orderBagService;
     @Mock
@@ -278,6 +189,13 @@ class UBSManagementServiceImplTest {
     private UserNotificationRepository userNotificationRepository;
     @Mock
     private NotificationParameterRepository notificationParameterRepository;
+    @Mock
+    private CityRepository cityRepository;
+    @Mock
+    private DistrictRepository districtRepository;
+
+    @InjectMocks
+    private UBSManagementServiceImpl ubsManagementService;
 
     @Test
     void getAllCertificates() {
@@ -616,7 +534,7 @@ class UBSManagementServiceImplTest {
         when(modelMapper.map(any(), eq(new TypeToken<List<OrderDetailInfoDto>>() {
         }.getType()))).thenReturn(TEST_ORDER_DETAILS_INFO_DTO_LIST);
 
-        List<OrderDetailInfoDto> actual = ubsManagementService.getOrderDetails(1L, "ua");
+        List<OrderDetailInfoDto> actual = ubsManagementService.getOrderDetails(1L, "uk");
 
         assertEquals(TEST_ORDER_DETAILS_INFO_DTO_LIST, actual);
 
@@ -661,7 +579,7 @@ class UBSManagementServiceImplTest {
         when(orderRepository.getOrderDetails(1L)).thenReturn(Optional.empty());
 
         assertThrows(NotFoundException.class,
-                () -> ubsManagementService.getOrderDetails(1L, "ua"));
+                () -> ubsManagementService.getOrderDetails(1L, "uk"));
     }
 
     @Test
@@ -875,7 +793,7 @@ class UBSManagementServiceImplTest {
 
     @Test
     void testSetOrderDetailConfirmed() {
-        when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(ModelUtils.getOrdersStatusConfirmedDto()));
+        when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(getOrdersStatusConfirmedDto()));
         doNothing().when(orderDetailRepository).updateConfirm(anyInt(), anyLong(), anyLong());
         when(orderRepository.getOrderDetails(anyLong()))
                 .thenReturn(Optional.ofNullable(getOrdersStatusFormedDto()));
@@ -1060,24 +978,6 @@ class UBSManagementServiceImplTest {
     }
 
     @Test
-    void testSaveAdminToOrder() {
-        Order order = getOrder();
-        TariffsInfo tariffsInfo = getTariffsInfo();
-        order.setTariffsInfo(tariffsInfo);
-        Employee employee = getEmployee();
-
-        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
-        when(employeeRepository.findByEmail("test@gmail.com")).thenReturn(Optional.of(employee));
-        when(tariffsInfoRepository.findTariffsInfoByIdForEmployee(1L, 1L)).thenReturn(Optional.of(tariffsInfo));
-
-        ubsManagementService.saveAdminCommentToOrder(getAdminCommentDto(), "test@gmail.com");
-
-        verify(orderRepository).findById(1L);
-        verify(employeeRepository).findByEmail("test@gmail.com");
-        verify(tariffsInfoRepository).findTariffsInfoByIdForEmployee(1L, 1L);
-    }
-
-    @Test
     void testUpdateEcoNumberForOrderById() {
         when(orderRepository.findById(1L)).thenReturn(Optional.of(getOrder()));
         ubsManagementService.updateEcoNumberForOrderById(getEcoNumberDto(), 1L, "abc");
@@ -1111,15 +1011,6 @@ class UBSManagementServiceImplTest {
         ecoNumberDto.setEcoNumber(new HashSet<>(List.of("1234a")));
         assertThrows(BadRequestException.class,
                 () -> ubsManagementService.updateEcoNumberForOrderById(ecoNumberDto, 1L, "abc"));
-        verify(orderRepository).findById(1L);
-    }
-
-    @Test
-    void saveAdminCommentThrowsException() {
-        when(orderRepository.findById(1L)).thenReturn(Optional.empty());
-        AdminCommentDto adminCommentDto = getAdminCommentDto();
-        assertThrows(NotFoundException.class,
-                () -> ubsManagementService.saveAdminCommentToOrder(adminCommentDto, "abc"));
         verify(orderRepository).findById(1L);
     }
 
@@ -1429,7 +1320,7 @@ class UBSManagementServiceImplTest {
     @Test
     void getOrderSumDetailsForAdjustmentPaidOrder() {
         CounterOrderDetailsDto dto = ModelUtils.getcounterOrderDetailsDto();
-        Order order = ModelUtils.getAdjustmentPaidOrder();
+        Order order = ModelUtils.getConfirmedPaidOrder();
         order.setOrderDate(LocalDateTime.now());
         when(orderRepository.getOrderDetails(1L)).thenReturn(Optional.of(order));
 
@@ -1443,7 +1334,7 @@ class UBSManagementServiceImplTest {
     @Test
     void getOrderSumDetailsForFormedHalfPaidOrderWithDiffBags() {
         CounterOrderDetailsDto dto = ModelUtils.getcounterOrderDetailsDto();
-        Order order = ModelUtils.getFormedHalfPaidOrder();
+        Order order = getFormedHalfPaidOrder();
         order.setOrderDate(LocalDateTime.now());
         when(orderRepository.getOrderDetails(1L)).thenReturn(Optional.of(order));
 
@@ -1732,7 +1623,7 @@ class UBSManagementServiceImplTest {
         UpdateAllOrderPageDto updateAllOrderPageDto = updateAllOrderPageDto();
         when(orderRepository.findById(4L)).thenReturn(Optional.ofNullable(order));
         assertThrows(NotFoundException.class,
-            () -> ubsManagementService.updateAllOrderAdminPageInfo(updateAllOrderPageDto, "uuid", "ua"));
+            () -> ubsManagementService.updateAllOrderAdminPageInfo(updateAllOrderPageDto, "uuid", "uk"));
     }
 
     @Test
@@ -1740,7 +1631,7 @@ class UBSManagementServiceImplTest {
         UpdateAllOrderPageDto updateAllOrderPageDto = updateAllOrderPageDto();
         when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(Order.builder().build()));
         assertThrows(BadRequestException.class,
-            () -> ubsManagementService.updateAllOrderAdminPageInfo(updateAllOrderPageDto, "uuid", "ua"));
+            () -> ubsManagementService.updateAllOrderAdminPageInfo(updateAllOrderPageDto, "uuid", "uk"));
     }
 
     @Test
@@ -1757,49 +1648,49 @@ class UBSManagementServiceImplTest {
         assertEquals(expectedObject.getExportDetailsDto().getDateExport(),
             actual.getExportDetailsDto().getDateExport());
 
-        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "ua");
+        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "uk");
 
         expectedObject = updateAllOrderPageDto();
         actual = updateAllOrderPageDto();
         assertEquals(expectedObject.getExportDetailsDto().getDateExport(),
             actual.getExportDetailsDto().getDateExport());
 
-        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "ua");
+        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "uk");
 
         expectedObject = updateAllOrderPageDto();
         actual = updateAllOrderPageDto();
         assertEquals(expectedObject.getExportDetailsDto().getDateExport(),
             actual.getExportDetailsDto().getDateExport());
 
-        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "ua");
+        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "uk");
 
         expectedObject = updateAllOrderPageDto();
         actual = updateAllOrderPageDto();
         assertEquals(expectedObject.getExportDetailsDto().getDateExport(),
             actual.getExportDetailsDto().getDateExport());
 
-        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "ua");
+        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "uk");
 
         expectedObject = updateAllOrderPageDto();
         actual = updateAllOrderPageDto();
         assertEquals(expectedObject.getExportDetailsDto().getDateExport(),
             actual.getExportDetailsDto().getDateExport());
 
-        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "ua");
+        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "uk");
 
         expectedObject = updateAllOrderPageDto();
         actual = updateAllOrderPageDto();
         assertEquals(expectedObject.getExportDetailsDto().getDateExport(),
             actual.getExportDetailsDto().getDateExport());
 
-        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "ua");
+        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "uk");
 
         expectedObject = updateAllOrderPageDto();
         actual = updateAllOrderPageDto();
         assertEquals(expectedObject.getExportDetailsDto().getDateExport(),
             actual.getExportDetailsDto().getDateExport());
 
-        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "ua");
+        ubsManagementService.updateAllOrderAdminPageInfo(expectedObject, "uuid", "uk");
     }
 
     @Test
@@ -1811,7 +1702,7 @@ class UBSManagementServiceImplTest {
         when(receivingStationRepository.findById(1L)).thenReturn(Optional.of(getReceivingStation()));
         when(receivingStationRepository.findAll()).thenReturn(List.of(getReceivingStation()));
 
-        ubsManagementService.updateAllOrderAdminPageInfo(updateAllOrderPageDto, "test@gmail.com", "ua");
+        ubsManagementService.updateAllOrderAdminPageInfo(updateAllOrderPageDto, "test@gmail.com", "uk");
 
         verify(orderRepository, times(2)).findById(1L);
     }
@@ -2334,7 +2225,7 @@ class UBSManagementServiceImplTest {
         when(certificateRepository.findCertificate(1L)).thenReturn(getCertificateList());
         when(orderRepository.findById(anyLong())).thenReturn(Optional.of(order));
         when(serviceRepository.findServiceByTariffsInfoId(1L)).thenReturn(Optional.of(getService()));
-        when(modelMapper.map(getBaglist().get(0), BagInfoDto.class)).thenReturn(bagInfoDto);
+        when(modelMapper.map(getBaglist().getFirst(), BagInfoDto.class)).thenReturn(bagInfoDto);
         when(orderStatusTranslationRepository.getOrderStatusTranslationById(6L))
             .thenReturn(Optional.ofNullable(getStatusTranslation()));
         when(orderStatusTranslationRepository.findAllBy()).thenReturn(getOrderStatusTranslations());
@@ -2391,5 +2282,153 @@ class UBSManagementServiceImplTest {
         when(orderRepository.findById(paymentId)).thenReturn(Optional.empty());
         assertThrows(NotFoundException.class, () -> ubsManagementService.findOrderById(paymentId));
         verify(orderRepository, times(1)).findById(paymentId);
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {
+        "ADJUSTMENT",
+        "CONFIRMED",
+        "FORMED",
+        "NOT_TAKEN_OUT",
+        "ON_THE_ROUTE",
+        "BROUGHT_IT_HIMSELF"
+    })
+    void setOrderDetailWithConfirmedOrdersTest(String orderStatus) {
+        Order order = getOrdersStatusDoneDto();
+        order.setOrderStatus(OrderStatus.valueOf(orderStatus));
+        order.setConfirmedQuantity(new HashMap<>());
+        order.setExportedQuantity(new HashMap<>());
+        order.setAmountOfBagsOrdered(new HashMap<>());
+        Long orderId = order.getId();
+        Map<Integer, Integer> confirmed = Map.of(1, 11);
+        Bag bag = TEST_BAG;
+
+        when(bagRepository.findCapacityById(1)).thenReturn(30);
+        when(bagRepository.findActiveBagById(1)).thenReturn(Optional.of(bag));
+        when(orderDetailRepository.ifRecordExist(orderId, 1L)).thenReturn(1L);
+        when(orderDetailRepository.getConfirmWaste(orderId, 1L)).thenReturn(9L);
+        when(orderRepository.getOrderDetails(orderId)).thenReturn(Optional.of(order));
+        when(paymentRepository.selectSumPaid(orderId)).thenReturn(0L);
+        doNothing().when(orderDetailRepository).updateConfirm(anyInt(), anyLong(), anyLong());
+        doNothing().when(eventService).saveEvent(anyString(), anyString(), any());
+
+        ubsManagementService.setOrderDetail(order, confirmed, null, "test@mail.com");
+        verify(eventService).saveEvent(Mockito.contains(bag.getNameUk()), Mockito.eq("test@mail.com"),
+            Mockito.eq(order));
+        verify(eventService).saveEvent(anyString(), Mockito.eq("test@mail.com"), Mockito.eq(order));
+
+        Mockito.clearInvocations(eventService);
+        ubsManagementService.setOrderDetail(order, null, null, "test@mail.com");
+        verify(eventService, never()).saveEvent(anyString(), anyString(), any());
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"DONE", "CANCELED"})
+    void setOrderDetailWithExportedOrdersTest(String orderStatus) {
+        Order order = getOrdersStatusDoneDto();
+        order.setOrderStatus(OrderStatus.valueOf(orderStatus));
+        order.setConfirmedQuantity(new HashMap<>());
+        order.setExportedQuantity(new HashMap<>());
+        order.setAmountOfBagsOrdered(new HashMap<>());
+        Long orderId = order.getId();
+        Map<Integer, Integer> exported = Map.of(1, 15);
+        Bag bag = TEST_BAG;
+
+        when(bagRepository.findCapacityById(1)).thenReturn(30);
+        when(bagRepository.findActiveBagById(1)).thenReturn(Optional.of(bag));
+        when(orderDetailRepository.ifRecordExist(orderId, 1L)).thenReturn(1L);
+        when(orderDetailRepository.getExporterWaste(orderId, 1L)).thenReturn(8L);
+        when(orderDetailRepository.getConfirmWaste(orderId, 1L)).thenReturn(8L);
+        when(orderRepository.getOrderDetails(orderId)).thenReturn(Optional.of(order));
+        when(paymentRepository.selectSumPaid(orderId)).thenReturn(0L);
+        doNothing().when(orderDetailRepository).updateExporter(anyInt(), anyLong(), anyLong());
+        doNothing().when(orderRepository).updateOrderPaymentStatus(anyLong(), anyString());
+        doNothing().when(eventService).saveEvent(anyString(), anyString(), any());
+
+        ubsManagementService.setOrderDetail(order, null, exported, "test@mail.com");
+        verify(eventService).saveEvent(Mockito.contains(bag.getNameUk()), Mockito.eq("test@mail.com"),
+            Mockito.eq(order));
+        verify(eventService, atLeastOnce()).saveEvent(anyString(), Mockito.eq("test@mail.com"), Mockito.eq(order));
+
+        Mockito.clearInvocations(eventService);
+        ubsManagementService.setOrderDetail(order, null, null, "test@mail.com");
+        verify(eventService, never()).saveEvent(anyString(), anyString(), any());
+    }
+
+    @Test
+    void setOrderDetailNeitherConfirmedNorExportedTest() {
+        Order order = getOrdersStatusDoneDto();
+        order.setOrderStatus(null);
+        order.setConfirmedQuantity(new HashMap<>());
+        order.setExportedQuantity(new HashMap<>());
+        order.setAmountOfBagsOrdered(new HashMap<>());
+        Long orderId = order.getId();
+        Map<Integer, Integer> confirmed = Map.of(1, 11);
+        Map<Integer, Integer> exported = Map.of(1, 15);
+
+        when(bagRepository.findCapacityById(1)).thenReturn(30);
+        when(bagRepository.findActiveBagById(1)).thenReturn(Optional.of(TEST_BAG));
+        when(orderDetailRepository.ifRecordExist(orderId, 1L)).thenReturn(1L);
+        when(orderRepository.getOrderDetails(orderId)).thenReturn(Optional.of(order));
+        when(paymentRepository.selectSumPaid(orderId)).thenReturn(0L);
+        doNothing().when(orderDetailRepository).updateConfirm(anyInt(), anyLong(), anyLong());
+        doNothing().when(orderRepository).updateOrderPaymentStatus(anyLong(), anyString());
+        doNothing().when(eventService).saveEvent(anyString(), anyString(), any());
+
+        ubsManagementService.setOrderDetail(order, confirmed, exported, "test@mail.com");
+        verify(eventService, atLeastOnce()).saveEvent(anyString(), Mockito.eq("test@mail.com"), Mockito.eq(order));
+    }
+
+    @Test
+    void getOrderSumDetailsWhenBeforeShipmentWithHalfPaidOrderTest() {
+        Order order = getFormedHalfPaidOrder();
+        Map<Integer, Integer> bagAmounts = new HashMap<>();
+        bagAmounts.put(1, 1);
+        order.setAmountOfBagsOrdered(bagAmounts);
+
+        when(orderRepository.getOrderDetails(1L)).thenReturn(Optional.of(order));
+        doReturn(List.of(TEST_BAG)).when(orderBagService).findAllBagsInOrderBagsList(anyList());
+        doNothing().when(notificationService).notifyHalfPaidPackage(order);
+
+        ubsManagementService.getOrderSumDetails(1L);
+
+        verify(notificationService).notifyHalfPaidPackage(order);
+    }
+
+    @Test
+    void getOrderSumDetailsWhenAfterConfirmationWithPaidOrderTest() {
+        Order order = getFormedHalfPaidOrder();
+        order.setOrderStatus(OrderStatus.DONE);
+        Map<Integer, Integer> bagAmounts = new HashMap<>();
+        bagAmounts.put(1, 1);
+        order.setAmountOfBagsOrdered(bagAmounts);
+
+        when(orderRepository.getOrderDetails(1L)).thenReturn(Optional.of(order));
+        doReturn(List.of(TEST_BAG)).when(orderBagService).findAllBagsInOrderBagsList(anyList());
+        doNothing().when(notificationService).notifyHalfPaidPackage(order);
+
+        ubsManagementService.getOrderSumDetails(1L);
+
+        verify(notificationService).notifyHalfPaidPackage(order);
+    }
+
+    @Test
+    void updateOrderDetailStatusToNotTakenOutTest() {
+        String email = "some@email.com";
+        Order saved = getOrder();
+        saved.setOrderStatus(OrderStatus.ON_THE_ROUTE);
+        Order updated = getOrder();
+        updated.setOrderStatus(OrderStatus.NOT_TAKEN_OUT);
+        OrderDetailStatusRequestDto detailStatusDto = OrderDetailStatusRequestDto.builder()
+            .orderStatus("NOT_TAKEN_OUT")
+            .build();
+
+        when(paymentRepository.findAllByOrderId(saved.getId())).thenReturn(saved.getPayment());
+
+        OrderDetailStatusDto result = ubsManagementService.updateOrderDetailStatus(saved, detailStatusDto, email);
+
+        verify(eventService).saveEvent(OrderHistory.ORDER_NOT_TAKEN_OUT_UK, email, updated);
+        verify(orderRepository).save(updated);
+        assertEquals(OrderStatus.NOT_TAKEN_OUT.name(), result.getOrderStatus());
     }
 }
